--- a/NXRemotingProject/Server/Server.csproj
+++ b/NXRemotingProject/Server/Server.csproj
@@ -72,19 +72,19 @@
   <ItemGroup>
     <Reference Include="NXOpen">
       <Name>NXOpen</Name>
-      <HintPath>$(UGII_ROOT_DIR)\managed\NXOpen.dll</HintPath>
+      <HintPath>..\..\..\Lab7\Lab7Journal\Lab7Journal\bin\Debug\NXOpen.dll</HintPath>
     </Reference>
     <Reference Include="NXOpen.UF">
       <Name>NXOpen.UF</Name>
-      <HintPath>$(UGII_ROOT_DIR)\managed\NXOpen.UF.dll</HintPath>
+      <HintPath>..\..\..\Lab7\Lab7Journal\Lab7Journal\bin\Debug\NXOpen.UF.dll</HintPath>
     </Reference>
     <Reference Include="NXOpen.Utilities">
       <Name>NXOpen.Utilities</Name>
-      <HintPath>$(UGII_ROOT_DIR)\managed\NXOpen.Utilities.dll</HintPath>
+      <HintPath>..\..\..\Lab7\Lab7Journal\Lab7Journal\bin\Debug\NXOpen.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="NXOpenUI">
       <Name>NXOpenUI</Name>
-      <HintPath>$(UGII_ROOT_DIR)\managed\NXOpenUI.dll</HintPath>
+      <HintPath>..\..\..\Lab7\Lab7Journal\Lab7Journal\bin\Debug\NXOpenUI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
