--- a/NXRemotingProject/NXRemotingProject/NXRemotingProject.csproj
+++ b/NXRemotingProject/NXRemotingProject/NXRemotingProject.csproj
@@ -81,6 +81,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
